--- a/ArtifexAI/package.json
+++ b/ArtifexAI/package.json
@@ -102,6 +102,8 @@
     "konva": "^9.3.6",
     "litegraph.js": "^0.7.18",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.17",
     "react-konva": "^18.2.10",
